--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "expose-loader": "^0.7.3",
     "html-webpack-plugin": "^2.28.0",
     "lodash": "^4.17.5",
+    "lz-string": "^1.4.4",
     "node-static": "^0.7.9",
     "prettydiff2": "^2.2.7",
     "react": "^15.5.4",
@@ -21,7 +22,9 @@
     "uninstall": "0.0.0"
   },
   "devDependencies": {
+    "@types/history": "^4.6.2",
     "@types/lodash": "^4.14.104",
+    "@types/lz-string": "^1.3.32",
     "@types/react": "^15.0.24",
     "@types/react-codemirror": "^1.0.1",
     "@types/react-dom": "^15.5.0",
