--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^15.5.4",
     "react-codemirror": "^1.0.0",
     "react-dom": "^15.5.4",
+    "react-github-button": "^0.1.11",
     "react-jsonschema-form": "^1.0.1",
     "unibeautify": "^0.7.0",
     "uninstall": "0.0.0"
