--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "expose-loader": "^0.7.3",
+    "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^2.28.0",
     "lodash": "^4.17.5",
     "lz-string": "^1.4.4",
