--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
     "exports-loader": "^0.6.4",
+    "file-loader": "^1.1.9",
     "imports-loader": "^0.7.1",
     "node-sass": "^4.5.3",
     "postcss-loader": "^2.0.6",
