--- a/.unibeautifyrc.yml
+++ b/.unibeautifyrc.yml
@@ -3,7 +3,7 @@ _:
   indent_char: " "
   indent_size: 2
 TypeScript:
-  beautifiers: ["Pretty Diff", "Prettier"]
+  beautifiers: ["Prettier"]
   align_assignments: false
   arrow_parens: "as-needed"
   break_chained_methods: true
@@ -16,7 +16,7 @@ TypeScript:
   object_curly_spacing: true
   quotes: "double"
   space_after_anon_function: false
-  wrap_line_length: 80
+  wrap_line_length: 120
 CSS:
   indent_char: " "
   indent_size: 2
