--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "main": "./build/bundle.js",
   "dependencies": {
     "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
+    "babel-loader": "^7.1.4",
     "babel-preset-es2015": "^6.24.1",
     "expose-loader": "^0.7.3",
     "font-awesome": "^4.7.0",
-    "html-webpack-plugin": "^3.0.1",
+    "html-webpack-plugin": "^3.0.6",
     "lodash": "^4.17.5",
     "lz-string": "^1.4.4",
     "node-static": "^0.7.9",
@@ -26,33 +26,34 @@
     "@types/history": "^4.6.2",
     "@types/lodash": "^4.14.104",
     "@types/lz-string": "^1.3.32",
-    "@types/react": "^16.0.38",
+    "@types/react": "^16.0.40",
     "@types/react-codemirror": "^1.0.1",
     "@types/react-dom": "^16.0.4",
-    "@types/react-jsonschema-form": "^1.0.2",
+    "@types/react-jsonschema-form": "^1.0.3",
     "@types/react-router-dom": "^4.0.4",
     "@types/webpack-env": "^1.13.0",
-    "awesome-typescript-loader": "^3.1.3",
+    "awesome-typescript-loader": "^5.0.0-0",
     "bootstrap": "^4.0.0",
     "bootstrap-loader": "^2.2.0",
     "clean-webpack-plugin": "^0.1.16",
     "css-loader": "^0.28.4",
     "exports-loader": "^0.7.0",
-    "file-loader": "^1.1.9",
+    "file-loader": "^1.1.11",
     "imports-loader": "^0.8.0",
     "node-sass": "^4.5.3",
-    "postcss-loader": "^2.0.6",
-    "react-hot-loader": "^3.0.0-beta.7",
+    "postcss-loader": "^2.1.1",
+    "react-hot-loader": "^4.0.0",
     "react-router-dom": "^4.1.1",
     "react-timeago": "^3.3.0",
-    "resolve-url-loader": "^2.0.3",
-    "sass-loader": "^6.0.6",
+    "resolve-url-loader": "^2.3.0",
+    "sass-loader": "^6.0.7",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.20.2",
     "typescript": "^2.3.3",
-    "url-loader": "^1.0.0",
-    "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.4.5"
+    "url-loader": "^1.0.1",
+    "webpack": "^4.1.0",
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0"
   },
   "scripts": {
     "build": "webpack",
