--- a/package.json
+++ b/package.json
@@ -53,11 +53,12 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.1.0",
     "webpack-cli": "^2.0.10",
-    "webpack-dev-server": "^3.1.0"
+    "webpack-dev-server": "^3.1.0",
+    "webpack-merge": "^4.1.2"
   },
   "scripts": {
-    "build": "webpack --mode production",
-    "start": "webpack-dev-server",
+    "build": "webpack --config webpack.prod.js --mode production",
+    "start": "webpack-dev-server --config webpack.dev.js --open --hot",
     "static": "static -at 0.0.0.0 dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
