--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "webpack-merge": "^4.1.2"
   },
   "scripts": {
-    "build": "webpack --config webpack.prod.js --mode production",
+    "build": "webpack --config webpack.prod.js",
     "start": "webpack-dev-server --config webpack.dev.js --open --hot",
     "static": "static -at 0.0.0.0 dist",
     "test": "echo \"Error: no test specified\" && exit 1"
