--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Try Unibeautify in your browser!",
   "main": "./build/bundle.js",
   "dependencies": {
+    "@types/react-copy-to-clipboard": "^4.2.5",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "font-awesome": "^4.7.0",
@@ -12,10 +13,11 @@
     "lz-string": "^1.4.4",
     "react": "^16.2.0",
     "react-codemirror": "^1.0.0",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.2.0",
     "react-github-button": "^0.1.11",
     "react-jsonschema-form": "^1.0.2",
-    "unibeautify": "^0.13.0"
+    "unibeautify": "^0.15.0"
   },
   "devDependencies": {
     "@types/history": "^4.6.2",
@@ -40,9 +42,9 @@
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.20.3",
     "typescript": "^2.7.2",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.12",
-    "webpack-dev-server": "^3.1.1",
+    "webpack": "^4.10.2",
+    "webpack-cli": "^2.1.5",
+    "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
   },
   "scripts": {
