--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "Try Unibeautify in your browser!",
   "main": "./build/bundle.js",
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
+    "@babel/core": "^7.0.0",
+    "babel-loader": "^8.0.0",
     "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^3.2.0",
     "lodash": "^4.17.10",
     "lz-string": "^1.4.4",
-    "react": "^16.4.0",
+    "react": "^16.4.2",
     "react-codemirror": "^1.0.0",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.4.0",
+    "react-dom": "^16.4.2",
     "react-github-button": "^0.1.11",
-    "react-jsonschema-form": "^1.0.3",
+    "react-jsonschema-form": "^1.0.4",
     "unibeautify": "^0.16.0"
   },
   "devDependencies": {
@@ -25,7 +25,7 @@
     "@types/react": "16.4.12",
     "@types/react-codemirror": "1.0.2",
     "@types/react-copy-to-clipboard": "4.2.6",
-    "@types/react-dom": "16.0.6",
+    "@types/react-dom": "16.0.7",
     "@types/react-jsonschema-form": "1.0.8",
     "@types/react-router-dom": "4.3.0",
     "@types/webpack-env": "1.13.6",
@@ -40,9 +40,9 @@
     "react-router-dom": "4.3.1",
     "sass-loader": "7.1.0",
     "source-map-loader": "0.2.4",
-    "style-loader": "0.21.0",
+    "style-loader": "0.23.0",
     "typescript": "3.0.1",
-    "webpack": "4.16.4",
+    "webpack": "4.17.1",
     "webpack-cli": "3.1.0",
     "webpack-dev-server": "3.1.6",
     "webpack-merge": "4.1.4"
