--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
         "module": "commonjs",
         "target": "es6",
         "jsx": "react",
-        "strictNullChecks": true
+        "strictNullChecks": true,
+        "resolveJsonModule": true
     },
     "files": [
         "./declarations.d.ts",
