--- a/.unibeautifyrc.yml
+++ b/.unibeautifyrc.yml
@@ -1,7 +1,4 @@
 ---
-_:
-  indent_char: " "
-  indent_size: 2
 TypeScript:
   beautifiers: ["Prettier"]
   align_assignments: false
@@ -9,7 +6,7 @@ TypeScript:
   break_chained_methods: true
   end_with_comma: true
   end_with_semicolon: true
-  indent_char: " "
+  indent_style: "space"
   indent_size: 2
   jsx_brackets: false
   multiline_ternary: true
@@ -18,8 +15,8 @@ TypeScript:
   space_after_anon_function: false
   wrap_line_length: 80
 CSS:
-  indent_char: " "
+  indent_style: "space"
   indent_size: 2
 HTML:
-  indent_char: " "
+  indent_style: "space"
   indent_size: 2
